--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -30,4 +30,5 @@ jobs:
         git config --global user.email 'actions@users.noreply.github.com'
         git add screenshot.png
         git commit -m 'Add screenshot'
-        git push
+        git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+
