too lazy to read docs commits are gone

--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -16,19 +16,10 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: 16
+        node-version: 14
 
     - name: Install Dependencies
-      run: npm install puppeteer
+      run: npm install puppeteer axios
 
-    - name: Capture Screenshot
+    - name: Capture and Upload Screenshot
       run: node capture-screenshot.js
-
-    - name: Commit Screenshot
-      run: |
-        git config --global user.name 'GitHub Actions'
-        git config --global user.email 'actions@users.noreply.github.com'
-        git add screenshot.png
-        git commit -m 'Add screenshot'
-        git push https://${{ secrets.PAC }}@github.com/${{ github.repository }}.git
-
